feat: one more util method created playWeakestManilha and created logic for chooseCard